--- a/catalog.html
+++ b/catalog.html
@@ -9,26 +9,24 @@
 </head>
 <body>
 
-  <header>
-    <div class="header-item1">
-      <div class="header-logo">
-        <a href="index.html">
-          <img src="img/logo.svg" width="150" height="150" alt="Логотип интернет-магазина Gllacy.">
-        </a>
-      </div>
-      <nav class="menu">
-
+  <header class="header-wrap">
+    <nav class="menu header-item1">
         <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
-
         <ul class="menu-list">
-          <li class="menu-item ">
-            <a class="active-item" href="#">Каталог</a>
+          <li class="header-logo">
+            <a href="index.html">
+              <img src="img/logo.svg" width="154" height="58" alt="Логотип интернет-магазина Gllacy.">
+            </a>          </li>
+          <li class="menu-item item-active">
+            <a href="#" class="menu-link">
+              <span>Каталог</span>
+            </a>
             <ul class="popup-menu-list">
               <li class="popup-menu-item">
                 <a href="#">Новинки</a>
               </li>
               <li class="popup-menu-item">
-                <a class="active-item" href="#">Сливочное</a>
+                <a href="#">Сливочное</a>
               </li>
               <li class="popup-menu-item">
                 <a href="#">Щербеты</a>
@@ -42,126 +40,138 @@
             </ul>
           </li>
           <li class="menu-item">
-            <a href="#">Доставка и оплата</a>
+            <a href="#" class="menu-link">
+              <span>Доставка и оплата</span>
+            </a>
           </li>
           <li class="menu-item">
-            <a href="#">О Компании</a>
+            <a href="#" class="menu-link">
+              <span>О Компании</span>
+            </a>
           </li>
         </ul>
-      </nav>
-    </div>
+    </nav>
     <div class="header-item2">
-      <div class="search-block">
-        <a class="link-search" href="#">
-          <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
-            <path class="search-svg-path" fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
-          </svg>
-        </a>
-        <div class="search-form">
-          <form action="https://echo.htmlacademy.ru/" id="search-form" method="GET">
-            <input class="type-text" type="text" name="search-form" placeholder="Что ищем?">
-          </form>
-        </div>
-      </div>
-      <ul class="user-profile">
-        <li class="profile-signin">
-          <a class="signin-link" href="#" aria-label="Вход в личный кабинет">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
-              <g class="signin-svg" fill="#fff">
-                <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/>
-                <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/>
-              </g>
+      <div class="header-icon">
+        <div class="search-block">
+          <a class="link-search" href="#">
+            <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
+              <path class="search-svg-path" fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
             </svg>
-            <span>Вход</span>
           </a>
-        </li>
-        <li class="signin-popup">
-          <div class="signin-popup-inner">
-            <form action="https://echo.htmlacademy.ru/" id="signin-form" method="POST">
-              <p class="form-email">
-                <input class="type-text"  type="text" name="signin-form" id="signin-email" placeholder="Электронная почта">
-                <label for="signin-email" class="visually-hidden">Введите адрес электронной почты</label>
-              </p>
-              <p class="form-password">
-                <input class="type-text" type="password" name="signin-form" id="signin-password" value="" placeholder="Пароль">
-                <label for="signin-password" class="visually-hidden">Введите пароль</label>
-              </p>
-              <p class="form-submit">
-                <button class="signin-button btn" type="submit" name="button" form="signin-form">Войти</button>
-              </p>
+          <div class="search-form-wrap">
+            <form class="search-form" action="https://echo.htmlacademy.ru/" id="search-form" method="GET">
+              <input class="form-search-input" type="text" name="search-form" placeholder="Что ищем?">
             </form>
-            <p class="signin-links">
-              <a class="links" href="#">Забыли пароль?</a>
-              <a class="links" href="#">Новая регистрация</a>
-            </p>
           </div>
-        </li>
-      </ul>
-      <div class="shipcart-block">
-        <span class="item-shipcart shipcart-full-bg">
-          <a  class="shipcart-link" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
-              <path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/>
-              <circle class="shipcart-full" fill="#ffffff" cx="6.984" cy="18" r="2"/>
-              <circle class="shipcart-full"  fill="#ffffff" cx="15.984" cy="18" r="2"/>
-              <path class="shipcart-full"  fill="#ffffff" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
-            </svg>
-            <span class="shipcart-total">2 товара</span>
-          </a>
-        </span>
-        <div class="shipcart-popup">
-          <table class="shipcart-table">
-            <tr class="shipcart-rows">
-              <td class="shipcart-position-remove">
-                <button type="submit">x</button>
-              </td>
-              <td class="shipcart-position-img">
-                <img src="img/catalog-ice-cream-1.jpg" width="33" height="33" alt="Пломбир с апельсином и джемом">
-              </td>
-              <td class="shipcart-position-atrical">
-                <a href="">Пломбир с апельсином и джемом</a>
-              </td>
-              <td class="shipcart-position-weight">
-                <span>1,5 кг х <b>200 руб.</b></span>
-              </td>
-              <td class="shipcart-position-price">
-                <span>300 руб</span>
-              </td>
-            </tr>
-            <tr class="shipcart-rows">
-              <td class="shipcart-position-remove">
-                <button type="submit">x</button>
-              </td>
-              <td class="shipcart-position-img">
-                <img src="img/catalog-ice-cream-3.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
-              </td>
-              <td class="shipcart-position-atrical">
-                <a href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
-              </td>
-              <td class="shipcart-position-weight">
-                <span>1,5 кг х <b>300 руб.</b></span>
-              </td>
-              <td class="shipcart-position-price">
-                <span>450 руб.</span>
-              </td>
-            </tr>
-            <tr class="shipcart-rows">
-              <td colspan="5" class="shipcart-totals">
-                <b>Итого: 750 руб.</b>
-              </td>
-            </tr>
-            <tr class="shipcart-rows">
-              <td colspan="5">
-                <button class="shipcart-button btn-active btn-hover" type="submit">Оформить заказ</button>
-              </td>
-            </tr>
-          </table>
         </div>
-      </div>
-      <p class="time-work">
-        <b>С 10 до 20, ежедневно</b>
-        <a href="tel:88124502525">8 812 450-25-25</a>
-      </p>
+        <ul class="user-profile">
+          <li class="profile-signin">
+            <a class="signin-link" href="#" aria-label="Вход в личный кабинет">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
+                <g class="signin-svg" fill="#fff">
+                  <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/>
+                  <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/>
+                </g>
+              </svg>
+              <span class="signin-txt">Вход</span>
+            </a>
+            <div class="signin-popup">
+              <form class="signin-main-form" action="https://echo.htmlacademy.ru/" id="signin-form" method="POST">
+                <span class="form-email">
+                  <input class="form-email-input" type="text" name="signin-form" id="signin-email" placeholder="Электронная почта" aria-label="Введите адрес электронной почты">
+                </span>
+                <span class="form-password">
+                  <input class="form-password-input"  type="password" name="signin-form" id="signin-password" value="" placeholder="Пароль" aria-label="Введите пароль">
+                </span>
+                <div class="button-cont">
+                  <p class="form-submit">
+                    <button class="signin-button btn" type="submit" name="button" form="signin-form">Войти</button>
+                  </p>
+                  <p class="popup-links">
+                    <a class="recovery-password" href="#">
+                      <span class="links">Забыли пароль?</span>
+                    </a>
+                    <a class="new-user" href="#">
+                      <span class="links">Новая регистрация</span>
+                    </a>
+                  </p>
+                </div>
+              </form>
+            </div>
+          </li>
+        </ul>
+        <div class="shipcart-block">
+          <span class="item-shipcart shipcart">
+            <a  class="shipcart-link" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
+                <path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/>
+                <circle class="shipcart-full" fill="#ffffff" cx="6.984" cy="18" r="2"/>
+                <circle class="shipcart-full"  fill="#ffffff" cx="15.984" cy="18" r="2"/>
+                <path class="shipcart-full"  fill="#ffffff" d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/>
+              </svg>
+              <span class="shipcart-total-empty">2 товара</span>
+            </a>
+          </span>
+          <div class="shipcart-popup">
+            <table class="shipcart-table">
+              <tr class="shipcart-rows">
+                <td class="shipcart-position-remove">
+                  <button class="shipcart-btn-remove" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#231F20" d="M10.979.728l-.708-.707L5.5 4.792.729.021.021.728 4.793 5.5.021 10.271l.707.708L5.5 6.207l4.771 4.772.708-.708L6.207 5.5z"/>
+                    </svg>
+                  </button>
+                </td>
+                <td class="shipcart-position-img">
+                  <img src="img/catalog-ice-cream-1.jpg" align="center" width="33" height="33" alt="Пломбир с апельсином и джемом">
+                </td>
+                <td class="shipcart-position-artical">
+                  <a href="">Пломбир с апельсиновым джемом</a>
+                </td>
+                <td class="shipcart-position-weight">
+                  <span>1,5 кг х <b>200 руб.</b></span>
+                </td>
+                <td class="shipcart-position-price">
+                  <span>300 руб</span>
+                </td>
+              </tr>
+              <tr class="shipcart-rows">
+                <td class="shipcart-position-remove">
+                  <button class="shipcart-btn-remove" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#231F20" d="M10.979.728l-.708-.707L5.5 4.792.729.021.021.728 4.793 5.5.021 10.271l.707.708L5.5 6.207l4.771 4.772.708-.708L6.207 5.5z"/>
+                    </svg>
+                  </button>
+                </td>
+                <td class="shipcart-position-img">
+                  <img src="img/catalog-ice-cream-3.jpg" align="center" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
+                </td>
+                <td class="shipcart-position-artical">
+                  <a href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
+                </td>
+                <td class="shipcart-position-weight">
+                  <span>1,5 кг х <b>300 руб.</b></span>
+                </td>
+                <td class="shipcart-position-price">
+                  <span>450 руб.</span>
+                </td>
+              </tr>
+            </table>
+            <div class="shipcart-foo">
+              <span class="rows-total">
+                <b>Итого: 750 руб.</b>
+              </span>
+              <span class="rows-submit">
+                <button class="shipcart-button btn-active btn-hover" type="submit">Оформить заказ</button>
+              </span>
+            </div>
+          </div>
+        </div>
+        <p class="time-work">
+          <b>С 10 до 20, ежедневно</b><br>
+          <a href="tel:88124502525">8 812 450-25-25</a>
+        </p>
     </div>
   </header>
   <main>
@@ -190,9 +200,10 @@
         <fieldset class="fieldset filter-sort">
           <legend>Сортировка:</legend>
           <select form="filter-form" name="filter-form">
-            <option value="popular">по популярности</option>
-            <option value="price-low">цена ниже</option>
-            <option value="price-high">цена выше</option>
+            <option class="filter-value" value="popular">по популярности</option>
+            <option class="filter-value" value="price-low">сначало недорогие</option>
+            <option class="filter-value" value="price-high">сначало дорогие</option>
+            <option class="filter-value" value="filter-fatty">по жирности</option>
           </select>
         </fieldset>
         <div class="filter-range">
