--- a/index.html
+++ b/index.html
@@ -10,49 +10,49 @@
   <body>
 
     <header class="header-wrap">
-      <nav class="menu header-item1">
-          <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
-          <ul class="menu-list">
-            <li class="header-logo">
-              <a href="#">
-                <img src="img/logo.svg" width="154" height="58" alt="Логотип интернет-магазина Gllacy.">
-              </a>
-            </li>
-            <li class="menu-item item-active">
-              <a href="#" class="menu-link">
-                <span>Каталог</span>
-              </a>
-              <ul class="popup-menu-list">
-                <li class="popup-menu-item">
-                  <a href="#">Новинки</a>
-                </li>
-                <li class="popup-menu-item">
-                  <a href="catalog.html">Сливочное</a>
-                </li>
-                <li class="popup-menu-item">
-                  <a href="#">Щербеты</a>
-                </li>
-                <li class="popup-menu-item">
-                  <a href="#">Фруктовый лед</a>
-                </li>
-                <li class="popup-menu-item">
-                  <a href="#">Мелорин</a>
-                </li>
-              </ul>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">
-                <span>Доставка и оплата</span>
-              </a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link">
-                <span>О Компании</span>
-              </a>
-            </li>
-          </ul>
-      </nav>
-      <div class="header-item2">
+      <div class="header-container">
+        <nav class="menu nav-container">
+            <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
+            <ul class="menu-list">
+              <li class="header-logo">
+                <a href="#">
+                  <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
+                </a>
+              </li>
+              <li class="menu-item item-active">
+                <a href="#" class="menu-link">
+                  <span>Каталог</span>
+                </a>
+                <ul class="popup-menu-list">
+                  <li class="popup-menu-item">
+                    <a href="#">Новинки</a>
+                  </li>
+                  <li class="popup-menu-item">
+                    <a href="catalog.html">Сливочное</a>
+                  </li>
+                  <li class="popup-menu-item">
+                    <a href="#">Щербеты</a>
+                  </li>
+                  <li class="popup-menu-item">
+                    <a href="#">Фруктовый лед</a>
+                  </li>
+                  <li class="popup-menu-item">
+                    <a href="#">Мелорин</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">
+                  <span>Доставка и оплата</span>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">
+                  <span>О Компании</span>
+                </a>
+              </li>
+            </ul>
+        </nav>
         <div class="header-icon">
           <div class="search-block">
             <a class="link-search" href="#">
@@ -115,10 +115,14 @@
             </span>
           </div>
         </div>
-        <p class="time-work">
-          <b>С 10 до 20, ежедневно</b><br>
-          <a href="tel:88124502525">8 812 450-25-25</a>
-        </p>
+      </div>
+        <div class="tw-container">
+            <p class="time-work">
+              <b>С 10 до 20, ежедневно</b><br>
+              <a href="tel:88124502525">8 812 450-25-25</a>
+            </p>
+          </div>
+        </div>
       </div>
     </header>
 
