Сетка каталога хитов

--- a/index.html
+++ b/index.html
@@ -160,23 +160,31 @@
 
         <section class="banner-block">
           <h3 class="visually-hidden">Рекламный блок</h3>
-          <div class="banner-item">
-            <h2 class="banner-heading">Малинка даром!</h2>
-            <p class="banner-content">
-              При покупке 2 кг любого фруктового мороженого,
-              добавим в ваш заказ добавим банку
-              малинового варенья бесплатно
-            </p>
-            <a class="banner-link btn" href="#">Хочу варенье!</a>
+          <div class="banner-item banner-bg1">
+            <div class="banner-item-container">
+              <h2 class="banner-heading">Малинка даром!</h2>
+              <p class="banner-content">
+                При покупке 2 кг любого фруктового мороженого,
+                добавим в ваш заказ банку
+                малинового варенья бесплатно.
+              </p>
+              <div class="banner-link-container1">
+                <a class="banner-link btn" href="#">Хочу варенье!</a>
+              </div>
+            </div>
           </div>
-          <div class="banner-item">
-            <h2 class="banner-heading">Шоколадки даром!</h2>
-            <p class="banner-content">
-              При покупке 2 кг пломбира, добавим в ваш
-              заказ упаковку вкуснейшей шоколадной
-              присыпки совершенно бесплатно.
-            </p>
-            <a class="banner-link btn" href="#">Хочу шоколадки!</a>
+          <div class="banner-item banner-bg2">
+            <div class="banner-item-container">
+              <h2 class="banner-heading">Шоколадки даром!</h2>
+              <p class="banner-content">
+                При покупке 2 кг пломбира, добавим в ваш
+                заказ упаковку вкуснейшей шоколадной
+                присыпки совершенно бесплатно.
+              </p>
+              <div class="banner-link-container2">
+                <a class="banner-link btn" href="#">Хочу шоколадки!</a>
+              </div>
+            </div>
           </div>
         </section>
 
@@ -192,10 +200,11 @@
                     <small class="price-weight">/кг</small>
                   </span>
                 </div>
-                <a href="#">
-                  <span class="product-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
-                  <span class="catalog-invisible-button btn">Быстрый просмотр</span>
-                </a>
+                  <div class="product-foo">
+                    <a href="#" class="product-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                    <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
+                  </div>
+
               </div>
             </li>
             <li class="hits-item">
@@ -207,10 +216,10 @@
                     <small class="price-weight">/кг</small>
                   </span>
                 </div>
-                <a href="#">
-                  <span class="product-name">Сливочно-кофейное с кусочками шоколада</span>
-                  <span class="catalog-invisible-button btn">Быстрый просмотр</span>
-                </a>
+                <div class="product-foo">
+                  <a href="#" class="product-name">Сливочно-кофейное с кусочками шоколада</a>
+                  <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
+                </div>
               </div>
             </li>
             <li class="hits-item">
@@ -222,10 +231,10 @@
                     <small class="price-weight">/кг</small>
                   </span>
                 </div>
-                <a href="#">
-                  <span class="product-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
-                  <span class="catalog-invisible-button btn">Быстрый просмотр</span>
-                </a>
+                <div class="product-foo">
+                  <a href="#" class="product-name">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                  <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
+                </div>
               </div>
             </li>
             <li class="hits-item">
@@ -237,10 +246,10 @@
                     <small class="price-weight">/кг</small>
                   </span>
                 </div>
-                <a href="#">
-                  <span class="product-name">Сливочное крем-брюле с карамельной подливкой</span>
-                  <span class="catalog-invisible-button btn" >Быстрый просмотр</span>
-                </a>
+                <div class="product-foo">
+                  <a href="#" class="product-name">Сливочное крем-брюле с карамельной подливкой</a>
+                  <a href="#" class="catalog-invisible-button btn" >Быстрый просмотр</a>
+                </div>
               </div>
             </li>
           </ul>
