--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <div class="header-container">
       <nav class="menu nav-container">
           <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
-          <ul class="menu-list">
+          <ul class="menu-list list-reset">
             <li class="header-logo">
               <a href="index.html">
                 <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
@@ -22,7 +22,7 @@
               <a href="#" class="menu-link">
                 <span>Каталог</span>
               </a>
-              <ul class="popup-menu-list">
+              <ul class="popup-menu-list list-reset">
                 <li class="popup-menu-item">
                   <a href="#">Новинки</a>
                 </li>
@@ -65,7 +65,7 @@
             </form>
           </div>
         </div>
-        <ul class="user-profile">
+        <ul class="user-profile list-reset">
           <li class="profile-signin">
             <a class="signin-link" href="#" aria-label="Вход в личный кабинет">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
@@ -183,7 +183,7 @@
 
       <h3 class="visually-hidden">Хлебные крошки</h3>
 
-      <ul class="breadcrumbs-list">
+      <ul class="breadcrumbs-list list-reset">
         <li class="breadcrumbs-item">
           <a class="links" href="index.html">Главная</a>
           »
@@ -279,7 +279,7 @@
 
       <h3 class="visually-hidden">Каталог магазина</h3>
 
-      <ul class="catalog-list">
+      <ul class="catalog-list list-reset">
         <li class="catalog-item">
           <div class="catalog-item-inner">
             <div class="catalog-image">
@@ -465,7 +465,7 @@
 
     <section class="page-block">
       <h3 class="visually-hidden">Нумерация страниц</h3>
-      <ul class="page-list">
+      <ul class="page-list list-reset">
         <li class="page-item active-page">
           <a href="#">1</a>
         </li>
@@ -488,7 +488,7 @@
   <footer class="footer-wrap">
     <div class="footer-social">
       <h3 class="visually-hidden">Список социальных сетей.</h3>
-      <ul class="social-list">
+      <ul class="social-list list-reset">
         <li class="social-item">
           <a href="#">
             <img src="img/twitter.svg" alt="twitter icon">
