--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header-container">
         <nav class="menu nav-container">
             <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
-            <ul class="menu-list">
+            <ul class="menu-list list-reset">
               <li class="header-logo">
                 <a href="#">
                   <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
@@ -24,7 +24,7 @@
                 <a href="#" class="menu-link">
                   <span>Каталог</span>
                 </a>
-                <ul class="popup-menu-list">
+                <ul class="popup-menu-list list-reset">
                   <li class="popup-menu-item">
                     <a href="#">Новинки</a>
                   </li>
@@ -67,7 +67,7 @@
               </form>
             </div>
           </div>
-          <ul class="user-profile">
+          <ul class="user-profile list-reset">
             <li class="profile-signin">
               <a class="signin-link" href="#" aria-label="Вход в личный кабинет">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19">
@@ -119,7 +119,7 @@
       </div>
       <div class="tw-container">
         <p class="time-work">
-          <b>С 10 до 20, ежедневно</b><br>
+          <b>С 10 до 20, ежедневно</b>
           <a href="tel:88124502525">8 812 450-25-25</a>
         </p>
       </div>
@@ -189,7 +189,7 @@
 
         <section class="hits-block">
           <h3 class="visually-hidden">Раздел Хиты. Что чаще всего покупают.</h3>
-          <ul class="hits-list">
+          <ul class="hits-list list-reset">
             <li class="hits-item">
               <div class="catalog-item-inner">
                 <div class="catalog-image">
@@ -255,8 +255,8 @@
 
         <section class="seo-block">
           <h3 class="visually-hidden">Подробнее о нашем магазине</h3>
-          <h1 class="seo-header">Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
-          <ul class="seo-list">
+          <h1 class="seo-header">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h1>
+          <ul class="seo-list list-reset">
             <li class="seo-item">
               <p class="seo-content">
                 Все наше мороженное изготавливается на собственном производстве,
@@ -289,7 +289,7 @@
           <article class="news-item news-item-bg1">
             <div class="news-container-left">
               <h3 class="visually-hidden">Новости нашего блога</h3>
-              <p class="news-header">Новое в нашем блоке</p>
+              <p class="news-header">Новое в нашем блоге</p>
               <a class="news-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
             </div>
           </article>
@@ -331,7 +331,7 @@
     <footer class="footer-wrap">
       <div class="footer-social">
         <h3 class="visually-hidden">Список социальных сетей.</h3>
-        <ul class="social-list">
+        <ul class="social-list list-reset">
           <li class="social-item">
             <a href="#">
               <img src="img/twitter.svg" alt="twitter icon">
