--- a/catalog.html
+++ b/catalog.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-  <title>HTML Academy: Глейси</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+    <title>HTML Academy: Глейси</title>
+  </head>
 <body>
   <header class="header-wrap">
     <div class="header-container">
+      <p class="header-logo">
+        <a href="index.html">
+          <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
+        </a>
+      </p>
       <nav class="menu nav-container">
+
           <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
+
           <ul class="menu-list list-reset">
-            <li class="header-logo">
-              <a href="index.html">
-                <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
-              </a>
-            </li>
-            <li class="menu-item item-active">
-              <a href="#" class="menu-link">
+            <li class="menu-item item-active list-reset">
+              <a href="#" class="menu-link ">
                 <span>Каталог</span>
               </a>
               <ul class="popup-menu-list list-reset">
@@ -102,7 +104,7 @@
           </li>
         </ul>
         <div class="shipcart-block">
-          <span class="item-shipcart shipcart">
+          <span class="item-shipcart shipcart full-shipcart">
             <a  class="shipcart-link" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
                 <path fill="#E84D37" d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"/>
