--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
@@ -12,15 +11,15 @@
 
     <header class="header-wrap">
       <div class="header-container">
+        <p class="header-logo">
+            <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
+        </p>
         <nav class="menu nav-container">
+
             <h3 class="visually-hidden">Основная навигация интернет магазина Gllacy</h3>
+
             <ul class="menu-list list-reset">
-              <li class="header-logo">
-                <a href="#">
-                  <img src="img/logo.svg" width="165" height="64" alt="Логотип интернет-магазина Gllacy.">
-                </a>
-              </li>
-              <li class="menu-item item-active">
+              <li class="menu-item">
                 <a href="#" class="menu-link">
                   <span>Каталог</span>
                 </a>
@@ -119,7 +118,7 @@
       </div>
       <div class="tw-container">
         <p class="time-work">
-          <b>С 10 до 20, ежедневно</b>
+          <b>С 10 до 20, ежедневно</b><br>
           <a href="tel:88124502525">8 812 450-25-25</a>
         </p>
       </div>
